🎨 style(brand): Create metatags and change favicon
- Include image logo

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,42 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>SmartsoftLabs</title>
 		<base href="/" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" type="image/x-icon" href="favicon.ico" />
+		<link rel="icon" type="image/x-icon" href="favicon.svg" />
+
+		<!-- Primary Meta Tags -->
+		<title>
+			Smartsoft Labs – Soluciones de software inteligente | Prueba Técnica desarrollada por Jose Luis Parra Sánchez
+		</title>
+		<meta
+			name="title"
+			content="Smartsoft Labs – Soluciones de software inteligente | Prueba Técnica desarrollada por Jose Luis Parra Sánchez" />
+		<meta
+			name="description"
+			content="Prueba técnica desarrollada por Jose Luis Parra Sánchez. Somos una empresa especializada en el diseño y desarrollo de soluciones innovadoras de software a la medida, implementando tecnologías de vanguardia mediante procesos consultivos y de co-creación para generar valor a nuestros clientes." />
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://www.jlps.smartsoftlabs.com/" />
+		<meta
+			property="og:title"
+			content="Smartsoft Labs – Soluciones de software inteligente | Prueba Técnica desarrollada por Jose Luis Parra Sánchez" />
+		<meta
+			property="og:description"
+			content="Prueba técnica desarrollada por Jose Luis Parra Sánchez. Somos una empresa especializada en el diseño y desarrollo de soluciones innovadoras de software a la medida, implementando tecnologías de vanguardia mediante procesos consultivos y de co-creación para generar valor a nuestros clientes." />
+		<meta property="og:image" content="assets/brand/meta_tags_banner.png" />
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://www.jlps.smartsoftlabs.com/" />
+		<meta
+			property="twitter:title"
+			content="Smartsoft Labs – Soluciones de software inteligente | Prueba Técnica desarrollada por Jose Luis Parra Sánchez" />
+		<meta
+			property="twitter:description"
+			content="Prueba técnica desarrollada por Jose Luis Parra Sánchez. Somos una empresa especializada en el diseño y desarrollo de soluciones innovadoras de software a la medida, implementando tecnologías de vanguardia mediante procesos consultivos y de co-creación para generar valor a nuestros clientes." />
+		<meta property="twitter:image" content="assets/images/brand/meta_tags_banner.png" />
 	</head>
 	<body>
 		<app-root></app-root>
