--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,12 @@
 			property="twitter:description"
 			content="Prueba técnica desarrollada por Jose Luis Parra Sánchez. Somos una empresa especializada en el diseño y desarrollo de soluciones innovadoras de software a la medida, implementando tecnologías de vanguardia mediante procesos consultivos y de co-creación para generar valor a nuestros clientes." />
 		<meta property="twitter:image" content="assets/images/brand/meta_tags_banner.png" />
+
+		<!-- Angular Material -->
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 	</head>
-	<body>
+	<body class="mat-typography">
 		<app-root></app-root>
 	</body>
 </html>
