✨ feature(constant): Add app-info constants
- Include app name in title pages

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,11 @@
 
 		<!-- Primary Meta Tags -->
 		<title>
-			Smartsoft Labs – Soluciones de software inteligente | Prueba Técnica desarrollada por Jose Luis Parra Sánchez
+			Smartsoft Labs - Soluciones de software inteligente | Prueba Técnica desarrollada por Jose Luis Parra Sánchez
 		</title>
 		<meta
 			name="title"
-			content="Smartsoft Labs – Soluciones de software inteligente | Prueba Técnica desarrollada por Jose Luis Parra Sánchez" />
+			content="Smartsoft Labs - Soluciones de software inteligente | Prueba Técnica desarrollada por Jose Luis Parra Sánchez" />
 		<meta
 			name="description"
 			content="Prueba técnica desarrollada por Jose Luis Parra Sánchez. Somos una empresa especializada en el diseño y desarrollo de soluciones innovadoras de software a la medida, implementando tecnologías de vanguardia mediante procesos consultivos y de co-creación para generar valor a nuestros clientes." />
@@ -22,7 +22,7 @@
 		<meta property="og:url" content="https://www.jlps.smartsoftlabs.com/" />
 		<meta
 			property="og:title"
-			content="Smartsoft Labs – Soluciones de software inteligente | Prueba Técnica desarrollada por Jose Luis Parra Sánchez" />
+			content="Smartsoft Labs - Soluciones de software inteligente | Prueba Técnica desarrollada por Jose Luis Parra Sánchez" />
 		<meta
 			property="og:description"
 			content="Prueba técnica desarrollada por Jose Luis Parra Sánchez. Somos una empresa especializada en el diseño y desarrollo de soluciones innovadoras de software a la medida, implementando tecnologías de vanguardia mediante procesos consultivos y de co-creación para generar valor a nuestros clientes." />
